Refactor block and item constructors and update method names to 1.6